{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player Movement",
            "id": "895a093a-1f24-40f5-a6cf-47372dbc76d3",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "fd339513-6c41-41af-be05-7d666eb84f38",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Camera",
                    "type": "PassThrough",
                    "id": "407b63a8-0994-4ec7-b487-0e668ce555fa",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "ee3cd6c2-ed51-4e76-a088-5fd0b8b41433",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "cdd6da6d-8acb-4ebe-908d-f6502d32b216",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "36f9c8fb-c49f-4ca0-8eb2-0b810edb691c",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "4af65e16-e2fb-44fe-9ab0-b7f11624832b",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "14a98075-b9ee-4bfa-9236-d5cc7bc26447",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "fba01e2e-e01e-4517-bace-1cb1380e25ac",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "",
                    "action": "Camera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "00513c0e-79cf-4772-9dc0-5368b322f2d7",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "NormalizeVector2",
                    "groups": "",
                    "action": "Camera",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Player Actions",
            "id": "6e011304-7140-418d-959f-4a22e6c85c9a",
            "actions": [
                {
                    "name": "LockOn",
                    "type": "Button",
                    "id": "33e9c373-0e69-41aa-af71-1a89e2bf70da",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Roll",
                    "type": "Button",
                    "id": "196fcab0-7a6d-4d06-a854-1f665525a90e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseLeftBtn",
                    "type": "Button",
                    "id": "d6c375d1-6738-4acf-b9a7-cb2e5d7c18c8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseRightBtn",
                    "type": "Button",
                    "id": "d285a60f-edda-45d4-9867-6af3981fba31",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CriticalAttack",
                    "type": "Button",
                    "id": "3914d6d6-bff2-4e43-9f92-7af9f7ed7e7b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RBtn",
                    "type": "Button",
                    "id": "0dfcef9e-0145-491b-a551-93f694c4b5b9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UpArrowBtn",
                    "type": "Button",
                    "id": "16bfbb94-4afc-43e3-8922-e63bf326a5a4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DownArrowBtn",
                    "type": "Button",
                    "id": "010e9afb-2fa8-45d6-ab2a-4c06529c3e9e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightArrowBtn",
                    "type": "Button",
                    "id": "382bcbb0-ffd9-4cd1-87eb-fdb75a8a5c1d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftArrowBtn",
                    "type": "Button",
                    "id": "e6caef85-ff1d-47b2-808d-b4433551a026",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "InteractionBtn",
                    "type": "Button",
                    "id": "3f56557a-0b27-4526-b8da-03e3f378ff33",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "e29e90a0-d932-498e-ad0b-d6a962ab3802",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "InGameMenu",
                    "type": "Button",
                    "id": "7ad06337-3c66-4228-8cce-927df9213491",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LockOnTargetLeft",
                    "type": "Button",
                    "id": "0666c68f-4bb6-40c5-9ea2-2c89999d94f7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LockOnTargetRight",
                    "type": "Button",
                    "id": "076e5f3f-bfa3-4c4e-b2b6-99658087ad20",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Y-button",
                    "type": "Button",
                    "id": "f771556b-156a-4c41-9924-5a6df26d979d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LT",
                    "type": "Button",
                    "id": "bd6be592-eb41-4be3-a4f6-d45bb17de00f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "XBtn",
                    "type": "Button",
                    "id": "0f7e33c9-53d7-40b0-9107-c91c2c5cf195",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d0d4f0cb-2c44-4a7e-aa01-d9913a85d072",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Roll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f62fe6ad-14a4-4178-add8-bc2ccc2f5dbb",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "MouseLeftBtn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "99b2cae7-5d6a-4ddd-ba58-fdf6d99e7fca",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RBtn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "460d0a17-2ce9-479e-b68b-07c4b97da6ef",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UpArrowBtn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "820b8bc4-417c-4a6d-a698-36c61682a30e",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DownArrowBtn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f1b60115-24ba-4c26-831c-ccc23b8e0ac4",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightArrowBtn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9d7fe5bd-cb97-4188-b072-5b0c3868b9bb",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftArrowBtn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dba96aad-7445-4c2d-8326-f9ebdba8cb77",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InteractionBtn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "58a3b8eb-799f-4bb0-b9d2-8f847226662f",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5e52ba2a-1053-44d9-8034-ba9287dace16",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InGameMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7e8e07d4-8288-4c1a-ab63-bf804b482026",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LockOn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5edaee48-4e23-406f-ba5a-a6c4989391ba",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LockOnTargetLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c687b28e-d986-472b-a964-df9da0d5d81b",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LockOnTargetRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4789bdc0-621e-4bfd-91cd-dcf41444b9b6",
                    "path": "<Keyboard>/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Y-button",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3d3ad79a-691b-40c3-808f-226ce34df56e",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "CriticalAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "40ed48e4-ca6c-4b9c-a637-bc9d237f3811",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LT",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6e05ec9b-d9a5-46ba-98b4-a8480e432601",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseRightBtn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1bd6dd42-4e20-4a16-a592-554d2ef07c24",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "XBtn",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}